Fix new discussion button layout on small devices

--- a/app/scss/partials/vanilla_components/_new-discussion.scss
+++ b/app/scss/partials/vanilla_components/_new-discussion.scss
@@ -3,6 +3,11 @@
 
 
 .DiscussionForm{
+  .Buttons{
+    @media #{$small-only} {
+      flex-direction: column;
+    }
+  }
   .P{
     label{
       font-size: rem-calc(18);
